Fix alignment bug

--- a/src/components/ChessPlayer/ChessPlayerComponent.css
+++ b/src/components/ChessPlayer/ChessPlayerComponent.css
@@ -24,6 +24,8 @@
 
 .chess-panel .chess-player-card {
     display: inline-flex;
+    vertical-align: top;
+    margin: 5px;
 }
 
 .chess-centered {
